set secret field to password

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <h1>Time-Based OTP Generator</h1>
     <label for="secret">Enter Secret:</label>
-    <input type="text" id="secret" placeholder="Your secret key" />
+    <input type="password" id="secret" placeholder="Your secret key" />
     <button onclick="generateOTP()">Generate OTP</button>
     <p id="otp"></p>
 </body>
